--- a/more.html
+++ b/more.html
@@ -39,10 +39,87 @@
           <i class="fas fa-qrcode"></i>
         </span>
         <span class="header__icon">
-          <i class="fas fa-cog"></i>
+          <a href="settings.html">
+            <i class="fas fa-cog"></i>
+          </a>
         </span>
       </div>
     </header>
+    <main class="more">
+      <header class="more__header">
+        <div class="friend__friend friend friend">
+          <!-- Front colunm-->
+          <div class="friend__column">
+            <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">
+                최재웅
+              </span>
+              <span class="friend__status">
+                jason967@naver.com
+              </span>
+            </div>
+          </div>
+          <!-- Back column-->
+          <div class="friend__column">
+            <div class="friend__now-listening">
+              <i class="far fa-comment-alt fa-2x"></i>
+            </div>
+          </div>
+        </div>
+        <ul class="more__btn-list">
+          <li class="more__btn">
+            <span class="more__btn-icon">
+              <i class="far fa-smile fa-2x"></i>
+            </span>
+            <span class="more__btn-title">
+              Emoticons
+            </span>
+          </li>
+          <li class="more__btn">
+            <span class="more__btn-icon">
+              <i class="fas fa-brush fa-2x"></i>
+            </span>
+            <span class="more__btn-title">
+              Themes
+            </span>
+          </li>
+          <li class="more__btn">
+            <span class="more__btn-icon">
+              <i class="fab fa-kickstarter-k fa-2x"></i>
+            </span>
+            <span class="more__btn-title">
+              Account
+            </span>
+          </li>
+        </ul>
+      </header>
+      <section class="more___suggestions">
+        <h5 class="more__title">
+          Suggestions
+        </h5>
+        <ul class="more__suggestions-list">
+          <li class="more__suggestion suggestion">
+            <span class="suggestion__icon">
+              <i class="fas fa-quote-right fa-2x"></i>
+            </span>
+            <span class="suggestion__title">Kakao Story</span>
+          </li>
+          <li class="more__suggestion suggestion">
+            <span class="suggestion__icon">
+              <i class="fas fa-beer fa-2x"></i>
+            </span>
+            <span class="suggestion__title">Kakao Friends</span>
+          </li>
+          <li class="more__suggestion suggestion">
+            <span class="suggestion__icon">
+              <i class="fas fa-gamepad"></i>
+            </span>
+            <span class="suggestion__title">Freinds Gem</span>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <!-- if you click have to fill the image -->
     <nav class="nav">
