--- a/index.html
+++ b/index.html
@@ -47,15 +47,18 @@
     <main class="chats">
       <ul class="chats__list">
         <li class="chats__chat">
-          <div class="chat__column">
-            <img class="chat__avatar g-avatar" src="images/avatar.jpg" />
-            <div class="chat__content">
-              <span class="chat__username">
-                Nam
-              </span>
-              <span class="chat__preview">카카오 가자</span>
-            </div>
+          <div class="chat__column chat">
+            <a href="chat.html ">
+              <img class="chat__avatar g-avatart" src="images/avatar.jpg" />
+              <div class="chat__content">
+                <span class="chat__username">
+                  Nam
+                </span>
+                <span class="chat__preview">카카오 가자</span>
+              </div>
+            </a>
           </div>
+
           <div class="chat__column">
             <span class="chat__timestamp">Yesterday</span>
           </div>
