--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
       src="https://kit.fontawesome.com/d451355fde.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Chats | KaKao Clone</title>
   </head>
   <body>
     <!-- status-bar =Parents-->
-    <div class="stauts-bar">
+    <div class="status-bar">
       <!--status-bar__ column== child-->
 
       <div class="status-bar__column">
