--- a/settings.html
+++ b/settings.html
@@ -7,11 +7,12 @@
       src="https://kit.fontawesome.com/d451355fde.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Settings | KaKao Clone</title>
   </head>
   <body>
     <!-- status-bar =Parents-->
-    <div class="stauts-bar">
+    <div class="status-bar">
       <!--status-bar__ column== child-->
 
       <div class="status-bar__column">
@@ -29,8 +30,8 @@
     <header class="header">
       <!-- left column-->
       <div class="header__header-coloumn">
-        <a href="more.html">
-          <i class="fas fa-arrow-left fa-2x"></i>
+        <a href="more.html" class="header__back_btn">
+          <i class="fas fa-arrow-left"></i>
         </a>
         <h1 class="header__title">Settings</h1>
       </div>
