--- a/chat.html
+++ b/chat.html
@@ -7,11 +7,12 @@
       src="https://kit.fontawesome.com/d451355fde.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Chat | KaKao Clone</title>
   </head>
   <body>
     <!-- status-bar =Parents-->
-    <div class="stauts-bar">
+    <div class="status-bar">
       <!--status-bar__ column== child-->
 
       <div class="status-bar__column">
@@ -29,7 +30,7 @@
     <header class="header">
       <!-- left column-->
       <div class="header__header-coloumn">
-        <a href="index.html">
+        <a href="index.html" class="header__back_btn">
           <i class="fas fa-arrow-left fa-2x"></i>
         </a>
         <h1 class="header__title">Best Friend</h1>
@@ -39,9 +40,9 @@
         <span class="header__icon">
           <i class="fas fa-search"></i>
         </span>
-        <div class="header__icon">
+        <span class="header__icon">
           <i class="fas fa-bars"></i>
-        </div>
+        </span>
       </div>
     </header>
     <main class="chat">
