--- a/chat.html
+++ b/chat.html
@@ -49,7 +49,7 @@
       <ul class="char__messages">
         <span class="chat__timestamp">Tuesday,June 9,2020</span>
         <li class="incoming-message message">
-          <img src="images/avatar.jpg" class="g-avatar message__avatar" />
+          <img src="images/avatar.jpg" class="m-avatar message__avatar" />
           <div class="message__content">
             <span class="meaasge__author">Best Friend</span>
             <div class="message__bubble">
