--- a/friends.html
+++ b/friends.html
@@ -46,7 +46,7 @@
     <main class="friends">
       <!--Me-->
       <header class="friends__header">
-        <div class="friend__friend friend friend--lg">
+        <div class="friend__friend friend">
           <div class="friend__column">
             <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
             <div class="friend__content">
@@ -62,10 +62,10 @@
       </header>
       <!-- Plus Friend-->
       <div class="friends__plus">
-        <h5 class="friends__plus-title">Plus friend</h5>
+        <h5 class="friends__title">Plus friend</h5>
         <div class="friend__friend friend friend">
           <div class="friend__column">
-            <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+            <img src="images/avatar.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Plus Friend
@@ -79,11 +79,11 @@
       <!-- Have to Rememeber All friends member have 2 columns!!!!-->
       <ul class="friends__list">
         <!-- change the friends memeber-->
-        <h5 class="friend__title">Friends 14</h5>
-        <li class="friend__friend friend friend">
+        <h5 class="friends__title">Friends 14</h5>
+        <li class="friends__friend friend friend">
           <!-- Front colunm-->
           <div class="friend__column">
-            <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+            <img src="images/avatar.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 최재웅
@@ -98,8 +98,8 @@
             <div class="friend__now-listening">
               <span>
                 잔나비-주저하는 연인들을 위하여
+                <i class="fas fa-play"></i>
               </span>
-              <i class="fas fa-play"></i>
             </div>
           </div>
         </li>
