--- a/index.html
+++ b/index.html
@@ -48,25 +48,29 @@
     <main class="chats">
       <ul class="chats__list">
         <li class="chats__chat">
-          <div class="chat__column chat">
-            <a href="chat.html ">
-              <img class="chat__avatar g-avatart" src="images/avatar.jpg" />
-              <div class="chat__content">
-                <span class="chat__username">
-                  Nam
-                </span>
-                <span class="chat__preview">카카오 가자</span>
+          <a href="chat.html ">
+            <div class="chat__chat friend friend--lg">
+              <!-- Front colunm-->
+              <div class="friend__column">
+                <img src="images/avatar.jpg" class="m-avatar friend__avatar" />
+                <div class="friend__content">
+                  <span class="friend__name">
+                    최성훈
+                  </span>
+                  <span class="friend__bottom-text">
+                    초밥 먹고 싶다.
+                  </span>
+                </div>
               </div>
-            </a>
-          </div>
-
-          <div class="chat__column">
-            <span class="chat__timestamp">Yesterday</span>
-          </div>
+              <!-- Back column-->
+              <div class="friend__column">
+                <span class="chat__timestamp">Yesterday</span>
+              </div>
+            </div>
+          </a>
         </li>
       </ul>
     </main>
-
     <!-- if you click have to fill the image -->
     <nav class="nav">
       <ul class="nav__list">
