--- a/more.html
+++ b/more.html
@@ -46,6 +46,7 @@
         </span>
       </div>
     </header>
+
     <main class="more">
       <header class="more__header">
         <div class="friend__friend friend friend">
@@ -63,9 +64,7 @@
           </div>
           <!-- Back column-->
           <div class="friend__column">
-            <div class="friend__now-listening">
-              <i class="far fa-comment-alt fa-2x"></i>
-            </div>
+            <i class="far fa-comment-alt fa-2x"></i>
           </div>
         </div>
         <ul class="more__btn-list">
@@ -95,7 +94,8 @@
           </li>
         </ul>
       </header>
-      <section class="more___suggestions">
+
+      <section class="more__suggestions">
         <h5 class="more__title">
           Suggestions
         </h5>
@@ -114,7 +114,7 @@
           </li>
           <li class="more__suggestion suggestion">
             <span class="suggestion__icon">
-              <i class="fas fa-gamepad"></i>
+              <i class="fas fa-gamepad fa-2x"></i>
             </span>
             <span class="suggestion__title">Freinds Gem</span>
           </li>
