--- a/chat.html
+++ b/chat.html
@@ -10,61 +10,77 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Chat | KaKao Clone</title>
   </head>
-  <body>
+  <body class="chats-body">
     <!-- status-bar =Parents-->
-    <div class="status-bar">
-      <!--status-bar__ column== child-->
+    <div class="header-wraper">
+      <div class="status-bar">
+        <!--status-bar__ column== child-->
 
-      <div class="status-bar__column">
-        <span class="status-bar__clock">13:56</span>
+        <div class="status-bar__column">
+          <span class="status-bar__clock">13:56</span>
+        </div>
+        <div class="status-bar__column">
+          <i class="fas fa-clock"></i>
+          <i class="fas fa-volume-up"></i>
+          <i class="fas fa-wifi"></i>
+          <span class="status-bar__battery-level">100%</span>
+          <i class="fas fa-battery-full"></i>
+        </div>
       </div>
-      <div class="status-bar__column">
-        <i class="fas fa-clock"></i>
-        <i class="fas fa-volume-up"></i>
-        <i class="fas fa-wifi"></i>
-        <span class="status-bar__battery-level">100%</span>
-        <i class="fas fa-battery-full"></i>
-      </div>
+
+      <header class="header">
+        <!-- left column-->
+        <div class="header__header-coloumn">
+          <a href="index.html" class="header__back_btn">
+            <i class="fas fa-arrow-left fa-2x"></i>
+          </a>
+          <h1 class="header__title">Best Friend</h1>
+        </div>
+        <!-- Right column-->
+        <div class="header__header-coloumn">
+          <span class="header__icon">
+            <i class="fas fa-search"></i>
+          </span>
+          <span class="header__icon">
+            <i class="fas fa-bars"></i>
+          </span>
+        </div>
+      </header>
     </div>
 
-    <header class="header">
-      <!-- left column-->
-      <div class="header__header-coloumn">
-        <a href="index.html" class="header__back_btn">
-          <i class="fas fa-arrow-left fa-2x"></i>
-        </a>
-        <h1 class="header__title">Best Friend</h1>
-      </div>
-      <!-- Right column-->
-      <div class="header__header-coloumn">
-        <span class="header__icon">
-          <i class="fas fa-search"></i>
-        </span>
-        <span class="header__icon">
-          <i class="fas fa-bars"></i>
-        </span>
-      </div>
-    </header>
-    <main class="chat">
-      <ul class="char__messages">
+    <main class="chat-screen">
+      <ul class="chat__messages">
         <span class="chat__timestamp">Tuesday,June 9,2020</span>
         <li class="incoming-message message">
           <img src="images/avatar.jpg" class="m-avatar message__avatar" />
           <div class="message__content">
-            <span class="meaasge__author">Best Friend</span>
-            <div class="message__bubble">
+            <span class="message__bubble">
               Congtrats I love you!
-            </div>
+            </span>
+            <span class="message__author">Best Friend</span>
           </div>
-          <span class="message__timestamp"></span>
+        </li>
+        <li class="sent-message message">
+          <div class="message__content">
+            <span class="message__bubble">
+              Steady makes perfect
+            </span>
+          </div>
         </li>
         <li class="incoming-message message">
-          <span class="message__timestamp"></span>
+          <img src="images/avatar.jpg" class="m-avatar message__avatar" />
           <div class="message__content">
-            <span class="meaasge__author">Best Friend</span>
-            <div class="message__bubble">
+            <span class="message__bubble">
+              Congtrats I love you!
+            </span>
+            <span class="message__author">Best Friend</span>
+          </div>
+        </li>
+        <li class="sent-message message">
+          <div class="message__content">
+            <span class="message__bubble">
               Steady makes perfect
-            </div>
+            </span>
           </div>
         </li>
       </ul>
